footer icon fix and theme contrast

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -131,14 +131,6 @@ $google-scholar-color: #4788ee !default;
 $orcid-color: #a6ce39;
 $emil-color: #0072c6;
 
-/* links */
-$link-color:mix(#000, $info-color, 20%)  !default;
-$link-color-hover: mix(#000, $link-color, 25%) !default;
-$link-color-visited: mix(#fff, $link-color, 15%) !default;
-$masthead-link-color: $primary-color  !default;
-$masthead-link-color-hover: mix(#fff, $link-color, 25%) !default;
-$navicon-link-color-hover: mix(#fff, $background-color, 75%) !default;
-
 /* notices */
 $notice-background-mix: 80% !default;
 $code-notice-background-mix: 90% !default;
