--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -48,6 +48,7 @@
   .page__footer-copyright {
     font-family: $global-font-family;
     font-size: $type-size-7;
+    text-align: center;
   }
   
   .page__footer-follow {
@@ -81,4 +82,8 @@
         white-space: nowrap;
       }
     }
+  }
+
+  .link {
+    color: aqua;
   }
