--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -83,7 +83,7 @@
       border-radius: 0;
 
       &:hover {
-        color: $link-color-hover;
+        color: var(--global-link-color-hover);
       }
 
       &.current,
