--- a/_sass/layout/_reset.scss
+++ b/_sass/layout/_reset.scss
@@ -75,7 +75,7 @@ audio:not([controls]) {
 }
 
 a {
-  color: $link-color;
+  color: var(--global-link-color);
 }
 
 /* Apply focus state */
