--- a/_sass/theme/_default_dark.scss
+++ b/_sass/theme/_default_dark.scss
@@ -10,14 +10,14 @@ $lighter-primary-color      : mix(#fff, $primary-color, 90%);
 $background                 : #292a2d;
 $background-light           : #302b25;
 $background-lighter         : #48413a;
-$text                      : #e4d4c8;
-$text-muted                : #cabcb1;
-$link                      : #d7c8bc;
-$link-dark                 : #e4d4c8;
-$link-light                : #b4a490;
-$footer                    : #252627;
-$border                    : #48413a;
-$border-light              : #5c5346;
+$text                       : #e4d4c8;
+$text-muted                 : #cabcb1;
+$link                       : #2dd4bf;
+$link-dark                  : #e4d4c8;
+$link-light                 : #b4a490;
+$footer                     : #252627;
+$border                     : #48413a;
+$border-light               : #5c5346;
 
 /* Color codes used for the site */
 $danger-color               : #d35c5c;
